--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -14,6 +14,38 @@
   &__left {
     flex: 0.3;
   }
+  &-album {
+    @include flex-center();
+    gap: 1rem;
+    color: $white;
+    &__image{
+      width: 56px;
+      height: auto;
+    }
+    &__info{
+      display: flex;
+      flex-direction: column;
+    }
+    &__song-name {
+      padding-bottom: 0.2rem;
+      font-size: 14px;
+    }
+    &__artist-name {
+      font-size: 12px;
+      color:$grey;
+    }
+    &__icons{
+      padding-left: 15px;
+      svg{
+        margin-right: 10px;
+        font-size: 16px;
+        color: $grey;
+        &:hover{
+          color: $white;
+        }
+      }
+    }
+  }
   &__center {
     flex: 0.4;
     color: $white;
@@ -55,5 +87,17 @@
   }
   &__right {
     flex: 0.3;
+    color: $white;
+    align-items: center;
+    svg{
+      font-size: 20px;
+    }
+    &-inner {
+      width: 220px;
+      margin-left: auto;
+    }
+    .MuiSlider-root {
+      color: $grey;
+    }
   }
 }
