--- a/src/index.scss
+++ b/src/index.scss
@@ -1,13 +1,19 @@
 @import 'scss/index.scss';
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
 
 * {
   margin: 0;
   box-sizing: border-box;
+  font-family: 'Open Sans', sans-serif;
+
 }
 body::-webkit-scrollbar{
   display: none;
 }
-
+a {
+  color: $white;
+  text-decoration: none;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
