Body and Header js component written, style properties added, scss file edited

--- a/src/scss/_extends.scss
+++ b/src/scss/_extends.scss
@@ -1,4 +1,15 @@
-@mixin flex-center {
-    display: flex;
-    align-items: center;
+.dot {
+    &::before {
+      content: ".";
+      position: relative;
+      margin: 0 4px;
+    }
+}
+
+.underline {
+    &:hover{
+        text-decoration: underline;
+        cursor: pointer;
+        color:$white;
+    }
 }
