--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,7 +1,47 @@
+@import "../../scss/index.scss";
+
 .body {
-    border: 1px solid red;
-    background: linear-gradient(rgb(91,87,115));
-    height:100vh;
-    color:#fff;
-    padding: 30px;
+  background: linear-gradient(transparent, rgb(7, 10, 8));
+  height: 100vh;
+  color: #fff;
+  padding: 30px;
+  &__content {
+    @include flex-center();
+    column-gap: 1.5rem;
+  }
+  &__playlist-image {
+    @media screen and (min-width: 992px) {
+      max-width: 232px;
+      height: 232px;
+    }
+    width: 100%;
+    max-width: 192px;
+    height: 192px;
+    object-fit: cover;
+    box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
+  }
+  .playlist {
+    & * {
+      padding-top: 5px;
+    }
+    &__root {
+      font-size: 12px;
+    }
+    &__name {
+      @media screen and (min-width: 992px) {
+        font-size: 96px;
+        line-height: 96px;
+      }
+      font-size: 72px;
+      line-height: 72px;
+      font-weight: 900;
+      letter-spacing: -0.04em;
+    }
+    &__description {
+      font-size: 14px;
+    }
+    &__time-props {
+      @include flex-center();
+    }
+  }
 }
