playlist songs component started to be written and some css bug fixed

--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -76,11 +76,8 @@
         &:hover {
           color: $white;
         }
-        &--scale {
+        &--big {
           font-size: 40px !important;
-          &:hover {
-            transform: scale(1.1);
-          }
         }
       }
   }
