--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,5 +1,9 @@
 // Variables
 $white: #fff;
 $black: #000;
-$green: #1db954;
+$green: #55BA55;
 $grey: #7a7979;
+
+$t-3: all 0.3s ease;
+$t-5: all 0.5s ease;
+$t-7: all 0.7s ease;
