--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -1,12 +1,17 @@
 @import "../../scss/index.scss";
 
 .body {
-  background: linear-gradient(transparent, rgb(7, 10, 8));
-  height: 100vh;
-  color: #fff;
-  padding: 30px;
+  color: $white;
+  background-color: #59CBB7;
+  margin-left: 232px;
+  &__top {
+    padding: 30px;
+    background: linear-gradient(transparent,rgba(0,0,0,.5));
+
+  }
   &__content {
-    @include flex-center();
+    display: flex;
+    align-items: flex-end;
     column-gap: 1.5rem;
   }
   &__playlist-image {
@@ -14,34 +19,58 @@
       max-width: 232px;
       height: 232px;
     }
-    width: 100%;
     max-width: 192px;
     height: 192px;
     object-fit: cover;
     box-shadow: 0 4px 60px rgba(0, 0, 0, 0.5);
   }
-  .playlist {
-    & * {
-      padding-top: 5px;
+    .playlist {
+          & * {
+            padding-top: 5px;
+          }
+          &__root {
+            font-size: 12px;
+          }
+          &__name {
+            @media screen and (min-width: 992px) {
+              font-size: 96px;
+              line-height: 96px;
+            }
+            font-size: 72px;
+            line-height: 72px;
+            font-weight: 900;
+            letter-spacing: -0.04em;
+          }
+          &__description {
+            font-size: 14px;
+            a {
+              &:hover {
+                text-decoration: underline;
+              }
+            }
+          }
+          &__time-props {
+            @include flex-center();
+          }
     }
-    &__root {
-      font-size: 12px;
+  &__icons{
+    @include flex-center;
+    padding: 24px 32px;
+    background-image: linear-gradient(rgba(0,0,0,.6),#121212);
+  }
+  &__icon{
+    margin-right: 24px;
+    font-size: 32px !important;
+    color: $green;
+    &--big{
+      font-size: 66px !important;
+      margin-right: 32px;
     }
-    &__name {
-      @media screen and (min-width: 992px) {
-        font-size: 96px;
-        line-height: 96px;
+    &--grey{
+      color: $grey;
+      &:hover{
+        color: $white;
       }
-      font-size: 72px;
-      line-height: 72px;
-      font-weight: 900;
-      letter-spacing: -0.04em;
-    }
-    &__description {
-      font-size: 14px;
-    }
-    &__time-props {
-      @include flex-center();
     }
   }
 }
