--- a/src/components/Player/Player.scss
+++ b/src/components/Player/Player.scss
@@ -1,6 +1,6 @@
 .player {
     &__body {
         display: grid;
-        grid-template-columns: 1fr 6fr;
+        grid-template-columns: 1fr auto;
     }
 }
