--- a/src/components/SideBar/Sidebar.scss
+++ b/src/components/SideBar/Sidebar.scss
@@ -1,12 +1,16 @@
 @import "../../scss/index.scss";
 
 .sidebar {
-  border: 1px solid #000;
-  height: 100vh;
+  border: 1px solid $black;
+  // height: 100vh;
   background: #040404;
-  color: #fff;
+  color: $white;
   min-width: 232px;
   padding: 10px 15px;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
   // Sidebar top
   &__top {
     display: flex;
