--- a/src/components/Body/Body.scss
+++ b/src/components/Body/Body.scss
@@ -4,6 +4,7 @@
   color: $white;
   background-color: #59cbb7;
   margin-left: 232px;
+  margin-bottom: 90px;
   &__top {
     padding: 30px;
     background: linear-gradient(transparent, rgba(0, 0, 0, 0.5));
